# aoc-2022

./: .editorconfig  .gitignore  Cargo.toml  Directory.Build.props  Makefile  README.md  aoc-2022-csharp.sln  aoc-2022-fsharp.sln  aoc-2022.sln  aoc-2022.sln.DotSettings  go.work  pom.xml  stack.yaml
Day01/fsharp/: Program.fs
Day01/haskell/: Day01.cabal  stack.yaml
Day01/java/: pom.xml
Day02/fsharp/: Program.fs
Day02/haskell/: Day02.cabal
Day02/java/: pom.xml
Day02/typescript/: main.ts
Day03/fsharp/: Program.fs
Day03/haskell/: Day03.cabal
Day03/java/: pom.xml
Day04/fsharp/: Program.fs
Day04/haskell/: Day04.cabal
Day04/java/: pom.xml
Day05/fsharp/: Program.fs
Day05/haskell/: Day05.cabal
Day05/java/: pom.xml
Day06/fsharp/: Program.fs
Day06/haskell/: Day06.cabal
Day06/java/: pom.xml
Day07/fsharp/: Attempt1.fs  Attempt2.fs  Attempt3.fs  Day07.fsproj  Program.fs
Day07/haskell/: Day07.cabal
Day07/java/: pom.xml
Day08/fsharp/: Program.fs
Day08/haskell/: Day08.cabal
Day08/java/: pom.xml
Day09/fsharp/: Program.fs
Day09/haskell/: Day09.cabal
Day09/java/: pom.xml
Day10/fsharp/: Program.fs
Day10/haskell/: Day10.cabal
Day10/java/: pom.xml
Day11/fsharp/: Day11.fsproj  Program.fs
Day11/haskell/: Day11.cabal
Day11/java/: pom.xml
Day12/fsharp/: Program.fs
Day12/haskell/: Day12.cabal  stack.yaml
Day12/java/: pom.xml
Day13/fsharp/: Program.fs
Day13/haskell/: Day13.cabal
Day13/java/: pom.xml
Day14/fsharp/: Program.fs
Day14/haskell/: Day14.cabal
Day14/java/: pom.xml
Day15/go/: go.mod
Day15/java/: pom.xml
(+55 files in other folders)
