name:                Day13
version:             0.1.0.0
homepage:            https://github.com/UnstoppableMango/aoc-2022#readme
build-type:          Simple
cabal-version:       >=1.10

executable Day13
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
